# Copyright 2024 by Composable Foundation
# Copyright 2025 by Michał Nazarewicz <mina86@mina86.com>

[package]
name = "solana-write-account"
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
client = []
lib = []

[dependencies]
solana-program = "2.3"
solana-system-interface = "1.0"
