# Copyright 2024 by Composable Foundation
# Copyright 2025 by Michał Nazarewicz <mina86@mina86.com>

[package]
name = "solana-write-account"
version = "0.2.0"
description = "A Solana program and library for overcoming Solana transaction size limit."
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
homepage = "https://codeberg.org/mina86/solana-write-account"
license = "GPL-2.0-or-later"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[features]
client = []
lib = []

[dependencies]
solana-program = "2.3"
solana-system-interface = "1.0"
