[workspace.package]
authors = ["Michal Nazarewicz <mina86@mina86.com>"]
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "chsum-*" ]
resolver = "2"

[workspace.dependencies]
derive_more = { version = "2.0.0", default-features = false }
solana-client = { version = "2.3", default-features = false }
solana-program = { version = "2.3", default-features = false }
solana-sdk = { version = "2.3", default-features = false }
solana-transaction-status = { version = "2.3", default-features = false }
#solana-write-account = { git = "https://codeberg.org/mina86/solana-write-account" }
solana-write-account = { path = ".." }
