# Copyright 2024 by Composable Foundation
# Copyright 2025 by Michał Nazarewicz <mina86@mina86.com>

[package]
name = "solana-write-account"
description = "A Solana program and library for overcoming Solana transaction size limit."
authors.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
## Enables features for off-chain clients which invoke smart contracts which
## read the instruction data from the account.
client = []

## Enables features for on-chain smart contracts which parse the serialised
## program arguments and allow the smart contract to read instruction data from
## an account.
lib = []

[dependencies]
document-features.workspace = true
solana-program.workspace = true
solana-system-interface.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[package.metadata.docs.rs]
all-features = true
